# chess-challenge

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: benchmark.rs  compete.rs  diagnose.rs  dump_encoding.rs  main.rs  play_move.rs  selfplay.rs  validate.rs
data/: openings.txt
engine/: Cargo.toml
engine/src/: bot.rs  eval.rs  game.rs  lib.rs  nn.rs  openings.rs  search.rs  uci.rs
engine/tests/fixtures/: tiny_eval.onnx  tiny_eval.onnx.data
gui/: Cargo.toml
gui/src/: main.rs
models/: capture_policy.onnx  random_policy.onnx
scripts/: create_test_models.py
tools/: encoding.py  validate_model.py
training/: .gitignore  eval_local.py  exp65_1024.onnx  modal_app.py  program.md  pyproject.toml  quick_test.py  results.tsv
training/configs/: exp01_outcome_small.yaml  exp02_outcome_medium.yaml  exp03_sf_sigmoid.yaml  exp04_blended.yaml  exp05_large_outcome.yaml  exp06_screlu.yaml  level1_v9_nnue.yaml
training/scripts/: diagnose_model.py  merge_datasets.py
training/src/: baseline_eval.py  baseline_eval_v2.py  checkpoint.py  data_gen.py  dataset.py  encoding.py  export_onnx.py  lichess_data.py  model.py  opening_data_gen.py  puzzle_eval.py  search_eval.py  selfplay.py  simple_eval.py  train.py
