[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"

[[bin]]
name = "compete"
path = "src/compete.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "play-move"
path = "src/play_move.rs"

[dependencies]
engine = { path = "../engine" }
rand = "0.8"
