[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "compete"
path = "src/compete.rs"

[[bin]]
name = "play-move"
path = "src/play_move.rs"

[[bin]]
name = "dump-encoding"
path = "src/dump_encoding.rs"

[dependencies]
engine = { path = "../engine" }
rand = "0.8"
