[project]
name = "chess-nn-training"
version = "2.0.0"
description = "Training pipeline for chess evaluation neural networks (1540 dual-perspective)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "python-chess>=1.999",
    "numpy>=1.24",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "pyyaml>=6.0",
    "zstandard>=0.21",
]
